--- a/Service/Properties/Resources.resx
+++ b/Service/Properties/Resources.resx
@@ -153,4 +153,8 @@
   <data name="JMapQueryPid" xml:space="preserve">
     <value>/pid</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="map_query" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\map-query.jar;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
